auth and register pages buttons hover z-index was corrected

--- a/client/src/pages/components/AuthorizationForm/AuthorizationForm.scss
+++ b/client/src/pages/components/AuthorizationForm/AuthorizationForm.scss
@@ -140,6 +140,7 @@
       border: 2px solid #00897b;
       border-radius: 5px;
       color: white;
+      z-index: 1;
 
       &:hover {
         cursor: pointer;
@@ -159,6 +160,7 @@
       border-radius: 5px;
       background: #000;
       color: white;
+      z-index: 1;
 
       &:hover {
         cursor: pointer;
