--- a/client/src/pages/components/RegistrationForm/RegistrationForm.scss
+++ b/client/src/pages/components/RegistrationForm/RegistrationForm.scss
@@ -157,6 +157,7 @@
       border-radius: 5px;
       background: #000;
       color: white;
+      z-index: 1;
 
       &:hover {
         cursor: pointer;
@@ -175,6 +176,7 @@
       border: 2px solid #00897b;
       border-radius: 5px;
       color: white;
+      z-index: 1;
 
       &:hover {
         cursor: pointer;
